--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.21",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.414.0",
     "next-themes": "^0.3.0",
